--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -3,13 +3,13 @@
 <text id="kuibu">跬步</text>
 <form bindsubmit="create_login">
 <view id="t1">
-<text>学号</text><input type="text" name="username" id="use" placeholder="输入您的学号" value="{{username}}"></input>
+<text>学号</text><input type="text" name="username" id="use" placeholder="输入您的学号" value="{{username}}" bindinput="usernameInput"></input>
 </view>
 <view id="t2">
-<text>密码</text><input type="password" name="password" id="pass1" placeholder="输入您的密码" value="{{password}}"></input>
+<text>密码</text><input type="password" name="password" id="pass1" placeholder="输入您的密码" value="{{password}}" bindinput="passwordInput" ></input>
 </view>
 
-<button bindtap="goto_index" id="btn1" form-type="submit"><text>登陆</text></button>
+<button bindtap="goto_index" id="btn1" form-type="submit" ><text>登陆</text></button>
 </form>
 
 <button bindtap="goto_zhuce" id="btn2"><text>注册</text></button>
