--- a/miniprogram/pages/Mine/my/my.wxml
+++ b/miniprogram/pages/Mine/my/my.wxml
@@ -1,2 +1,20 @@
-<!--pages/Mine/my/my.wxml-->
-<text>pages/Mine/my/my.wxml</text>
+<view class='b1 float'>
+<view class='head float'>
+<open-data type="userAvatarUrl"></open-data>
+</view>
+<view class='name float'>
+<open-data type="userNickName"></open-data>
+</view>
+</view>
+<block wx:for="{{userListInfo}}">
+<view class="b2">
+<view class="b3">
+<image src="{{item.icon}}"></image>
+</view>
+<view class="b4">
+<view>{{item.text}}</view>
+</view>
+<view class="listimage" style='background-image:url(/images/1.png)'></view>
+</view>
+</block>
+<button id="btn1" form-type="submit"><text>退出登录</text></button>
