--- a/miniprogram/pages/register/register.wxml
+++ b/miniprogram/pages/register/register.wxml
@@ -1,2 +1,45 @@
-<!--pages/register/register.wxml-->
-<text>pages/register/register.wxml</text>
+<view id="total">
+<form bindsubmit="create_zhuce">
+<view id="t1">
+<text>账号</text><input type="text" name="username" id="use" placeholder="请输入学工/职工号" value="{{username}}"></input>
+</view>
+<view id="t2">
+<text>身份证</text><input type="password" name="identity" id="pass1" placeholder="身份证后六位" value="{{password1}}"></input>
+</view>
+<view id="t3">
+<text>注册密码</text><input type="password" name="password1" id="pass2" placeholder="输入您密码" value="{{password2}}"></input>
+</view>
+<view id="t4">
+<text>确认密码</text><input type="password" name="passwrd2" id="pass3" placeholder="请确认密码" value="{{phone}}"></input>
+</view>
+<view id="t5">
+  <text>院校</text>
+  <!-- 下拉框 -->
+    <view class='select_box'>
+      <view class='select' catchtap='selectTaps'>
+        <text class='select_text'>{{selectDatas[indexs]}}</text>
+      
+      </view>
+      <view class='option_box' style='height:{{shows?(selectDatas.length>5?300:selectDatas.length*60):0}}rpx;'>
+        <text class='option' style='{{indexs==selectDatas.length-1&&"border:0;"}}' wx:for='{{selectDatas}}' wx:key='this' data-index='{{index}}' catchtap='optionTaps'>{{item}}</text>
+      </view>
+    </view>
+</view>
+<view id="t6">
+  <text>角色</text>
+  <!-- 下拉框 -->
+    <view class='select_box'>
+      <view class='select' catchtap='selectTap'>
+        <text class='select_text'>{{selectDatas[indexs]}}</text>
+      
+      </view>
+      <view class='option_box' style='height:{{shows?(selectDatas.length>5?300:selectDatas.length*60):0}}rpx;'>
+        <text class='option' style='{{indexs==selectDatas.length-1&&"border:0;"}}' wx:for='{{selectDatas}}' wx:key='this' data-index='{{index}}' catchtap='optionTap'>{{item}}</text>
+      </view>
+    </view>
+</view>
+
+<button id="btn1" form-type="submit"><text>注册</text></button>
+</form>
+
+</view>
