--- a/miniprogram/pages/register/register.wxss
+++ b/miniprogram/pages/register/register.wxss
@@ -1,1 +1,175 @@
-/* pages/register/register.wxss */
+#total{
+  width:100%;
+  height:1300rpx;
+  background-color: rgb(245,245,245);
+}
+#t1{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:70rpx;
+}
+#t2{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:80rpx;
+}
+#t3{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:90rpx;
+}
+#t4{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:100rpx;
+}
+#t5{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:110rpx;
+}
+#t6{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:120rpx;
+}
+#t1 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#use{
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t2 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#pass1{
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t3 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#pass2{
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t4 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#t5 text{
+  position: relative;
+  left:40rpx;
+  top:40rpx;
+  color: rgb(143, 143, 143);
+  }
+  #t6 text{
+    position: relative;
+    left:40rpx;
+    top:40rpx;
+    color: rgb(143, 143, 143);
+    }
+#pass3{
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+.select_box {
+  width:100%;
+  height:80rpx;
+  margin-left: 150rpx;
+  position: relative;
+  bottom: 60rpx;
+}
+
+.select {
+  box-sizing: border-box;
+  width: 400rpx;
+  height: 86rpx;
+  /* border: 1px solid #efefef; */
+  border-radius: 8rpx;
+  display: flex;
+  align-items: center;
+  padding: 0 20rpx;
+ 
+}
+
+.select_text {
+  font-size: 28rpx;
+  flex: 1;
+  color: rgb(102, 102, 102);
+  line-height: 90rpx;
+  height: 86rpx;
+
+}
+
+
+
+.option_box {
+  position: absolute;
+  top: 120rpx;
+  width: 400rpx;
+  /* border: 1px solid #efefef; */
+  box-sizing: border-box;
+  height: 0;
+  overflow-y: auto;
+  border-top: 0;
+  background: #fff;
+  transition: height 0.3s;
+  z-index: 100;
+}
+
+.option {
+  display: block;
+  line-height: 40rpx;
+  font-size: 28rpx;
+  border-bottom: 1px solid #efefef;
+  padding: 10rpx;
+  color: rgb(102, 102, 102);
+}
+#btn1{
+  position: relative;
+  top:300rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
