--- a/miniprogram/pages/Adminer/adminReset/adminReset.wxss
+++ b/miniprogram/pages/Adminer/adminReset/adminReset.wxss
@@ -1,1 +1,72 @@
-/* pages/Adminer/adminReset/adminReset.wxss */
+page{
+  background-color: #fff; 
+ }
+.top-bg{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 20rpx;
+  background-color: #F2F2F2;
+}
+.box-list{
+  margin-top: 20rpx;
+}
+.box-list .box-title-row{
+  display: flex;
+  font-size: 14px;
+  line-height: 42px;
+  border-bottom: 1px solid #F2F2F2;
+  margin: 0 15rpx;
+}
+.box-list .box-data-row{
+  display: flex;
+  font-size: 12px;
+  line-height: 42px;
+  border-bottom: 1px solid #F2F2F2;
+  margin: 0 15rpx;
+}
+.box-list .box-column1{
+  flex: 0 0 160rpx;
+  text-align: center;
+}
+.box-list .box-column2{
+  flex: 0 0 160rpx;
+  text-align: center;
+}
+.box-list .box-column3{
+  flex: 0 0 120rpx;
+  text-align: center;
+}
+.box-list .box-column4{
+  flex: 0 0 150rpx;
+  text-align: center;
+}
+.box-list .box-column-end{
+  flex-grow: 1;
+  text-align: center;
+}
+.statusF58B85{
+  border: 1px solid #F58B85;
+  font-size: 13px;
+  line-height: 16px;
+  padding: 0 8rpx;
+  border-radius: 8rpx;
+  color:#F58B85;
+  margin-right: 10rpx;
+  margin-top: 13px;
+}
+ 
+.c85bb58{
+  color: #85bb58;
+}
+#btn1{
+  position: relative;
+  top:200rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
