--- a/miniprogram/pages/Adminer/adminUpdate/adminUpdate.wxss
+++ b/miniprogram/pages/Adminer/adminUpdate/adminUpdate.wxss
@@ -1,1 +1,207 @@
-/* pages/Adminer/adminUpdate/adminUpdate.wxss */
+.search{  
+  width: 80%;  
+}  
+.search_arr {  
+  border: 1px solid #d0d0d0;  
+  border-radius: 10rpx;  
+  margin-left: 20rpx;  
+}  
+.search_arr input{  
+  margin-left: 60rpx;  
+  height: 60rpx;  
+  border-radius: 5px;  
+}  
+.bc_text {  
+  line-height: 68rpx;  
+  height: 68rpx;  
+  margin-top: 34rpx;  
+}  
+  
+.sousuo {  
+  margin-left: 15rpx;  
+  width: 15%;  
+  line-height: 150%;  
+  text-align: center;  
+  border: 1px solid #d0d0d0;  
+  border-radius: 10rpx;  
+}  
+.page_row{  
+  display: flex;  
+  flex-direction: row  ;
+  margin-top:20rpx;
+}  
+.searchcion {  
+  margin: 10rpx 10rpx 10rpx 10rpx;  
+  position: absolute;  
+  left:25rpx;  
+  z-index: 2;  
+  width: 20px;  
+  height: 20px;  
+  text-align: center;  
+}  
+#total{
+  width:100%;
+  height:1300rpx;
+  background-color: rgb(245,245,245);
+}
+#t1{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:70rpx;
+}
+#t2{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:80rpx;
+}
+#t3{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:90rpx;
+}
+#t4{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:100rpx;
+}
+#t1 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#use{
+  padding-left: 100rpx;
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t2 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#pass1{
+  padding-left: 100rpx;
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t3 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#pass2{
+  padding-left: 100rpx;
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t4 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#pass3{
+  padding-left: 100rpx;
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+#t5{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:110rpx;
+}
+#t5 text{
+  position: relative;
+  left:40rpx;
+  top:40rpx;
+  color: rgb(143, 143, 143);
+  }
+.select_box {
+  width:100%;
+  height:80rpx;
+  margin-left: 150rpx;
+  position: relative;
+  bottom: 60rpx;
+}
+
+.select {
+  box-sizing: border-box;
+  width: 400rpx;
+  height: 86rpx;
+  /* border: 1px solid #efefef; */
+  border-radius: 8rpx;
+  display: flex;
+  align-items: center;
+  padding: 0 20rpx;
+ 
+}
+
+.select_text {
+  font-size:32rpx;
+  flex: 1;
+  color: rgb(102, 102, 102);
+  line-height: 80rpx;
+  height: 86rpx;
+
+}
+
+
+
+.option_box {
+  position: absolute;
+  top: 120rpx;
+  width: 400rpx;
+  /* border: 1px solid #efefef; */
+  box-sizing: border-box;
+  height: 0;
+  overflow-y: auto;
+  border-top: 0;
+  background: #fff;
+  transition: height 0.3s;
+  z-index: 100;
+}
+
+.option {
+  display: block;
+  line-height: 40rpx;
+  font-size: 32rpx;
+  border-bottom: 1px solid #efefef;
+  padding: 10rpx;
+  color: rgb(102, 102, 102);
+}
+#btn1{
+  position: relative;
+  top:350rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
