--- a/miniprogram/pages/Mine/updatePwd/updatePwd.wxml
+++ b/miniprogram/pages/Mine/updatePwd/updatePwd.wxml
@@ -4,15 +4,15 @@
 <text>当前学号</text><input type="text" name="xuehao" id="use" placeholder="" value="{{username}}"></input>
 </view>
 <view id="t2">
-<text>旧密码</text><input type="password" name="password1" id="pass1" placeholder="请输入旧密码" value="{{password1}}"></input>
+<text>旧密码</text><input type="password" name="password1" id="pass1" placeholder="请输入旧密码" bindinput="oldPwd" value="{{password1}}"></input>
 </view>
 <view id="t3">
-<text>新密码</text><input type="password" name="password2" id="pass2" placeholder="请输入新密码" value="{{password2}}"></input>
+<text>新密码</text><input type="password" name="password2" id="pass2" placeholder="请输入新密码" bindinput="newPwd" value="{{password2}}"></input>
 </view>
 <view id="t4">
-<text>确认密码</text><input type="password" name="password3" id="pass3" placeholder="请确认新密码" value="{{password3}}"></input>
+<text>确认密码</text><input type="password" name="password3" id="pass3" placeholder="请确认新密码" bindinput="conNewPwd" value="{{password3}}"></input>
 </view>
-<button id="btn1" form-type="submit"><text>立即修改</text></button>
+<button id="btn1" form-type="submit" bindtap="update"><text>立即修改</text></button>
 </form>
 
 </view>
