--- a/miniprogram/pages/Adminer/admin/admin.wxss
+++ b/miniprogram/pages/Adminer/admin/admin.wxss
@@ -1,1 +1,72 @@
-/* pages/Adminer/admin/admin.wxss */
+page{
+  background-color: #F5F5F5;
+}
+.b1{
+  width: 750rpx;
+  height: 300rpx;
+  margin-bottom: 40rpx0;
+  background-color: white;
+  border-style: 6px solid #F5F5F5;
+}
+.b2{
+  position: relative;
+  display: flex;
+  padding: 15px;
+  align-items: center;
+  border-bottom: 1px solid #F5F5F5;
+  background-color: white;
+  padding-top: 20px;
+}
+.head{
+  overflow: hidden;
+  border-radius: 60%;
+  width: 240rpx;
+  height: 240rpx;
+  margin: 16rpx 60rpx;
+}
+.name{
+  line-height: 60rpx;
+  width: 280rpx;
+  height: 240rpx;
+  margin: 100rpx 50rpx;
+  font-size: 66rpx;
+}
+.float{
+  float: left;
+}
+.listimage{
+  position: absolute;
+  top: 18px;
+  right: 25px;
+  width: 25px;
+  height: 25px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.b3{
+  display: inline-block;
+  width: 20px;
+  margin-right: 5px;
+}
+.b3 image{
+  width: 100%;
+  height: 20px;
+  vertical-align: -2px;
+}
+.b4{
+  display: inline-block;
+  font-size:14px;
+  color: black;
+}
+#btn1{
+  position: relative;
+  top:200rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
+
