--- a/miniprogram/pages/mainPage/joinClass/joinClass.wxml
+++ b/miniprogram/pages/mainPage/joinClass/joinClass.wxml
@@ -1,2 +1,4 @@
-<!--pages/mainPage/joinClass/joinClass.wxml-->
-<text>pages/mainPage/joinClass/joinClass.wxml</text>
+<view id="t1">
+<text>班级号</text><input type="text" name="id" id="use" placeholder="输入班级号" value="{{username}}"></input>
+</view>
+<button id="btn1" form-type="submit" ><text>加入班级</text></button>
