--- a/miniprogram/pages/mainPage/joinClass/joinClass.wxss
+++ b/miniprogram/pages/mainPage/joinClass/joinClass.wxss
@@ -1,1 +1,32 @@
-/* pages/mainPage/joinClass/joinClass.wxss */
+#t1{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:70rpx;
+}
+#t1 text{
+  position: relative;
+  left:40rpx;
+  top:40rpx;
+  color: rgb(143, 143, 143);
+  }
+  #use{
+    width:400rpx;
+    height:80rpx;
+    margin-left: 200rpx;
+    position: relative;
+    bottom: 25rpx;
+  }
+  #btn1{
+    position: relative;
+    top:350rpx;
+    background-color:rgb(51, 204, 170);
+    width:600rpx;
+    border-radius: 50rpx;
+  }
+  #btn1 text{
+    color:white;
+    font-size: 39rpx;
+  }
+  
