--- a/miniprogram/pages/mainPage/main/main.wxss
+++ b/miniprogram/pages/mainPage/main/main.wxss
@@ -1,1 +1,87 @@
-/* pages/mainPage/main/main.wxss */
+#total{
+  width:100%;
+  height:1300rpx;
+  background-color: rgb(245,245,245);
+}
+image{
+  width:250rpx;
+  height:100rpx;
+  position: relative;
+  left:250rpx;
+  top:100rpx;
+}
+#t1{
+  width:100%;
+  height:220rpx;
+  background-color: white;
+  position: relative;
+  top:200rpx;
+}
+
+
+#t1 text{
+position: relative;
+left:40rpx;
+top:40rpx;
+color: black;
+}
+#use{
+  width: 100%;
+  height:200rpx;
+  margin-left: 120rpx;
+  position: relative;
+  bottom: 25rpx;
+  background-color: white;
+}
+
+#btn3{
+  position: relative;
+  top:250rpx;
+  right:230rpx;
+  background-color: rgb(245, 245, 245);
+}
+#btn3::after{
+  border: none;
+}
+#btn3 text{
+  color:black;
+  font-size: 28rpx;
+}
+#btn4{
+  position: relative;
+  top:170rpx;
+  left:200rpx;
+  width:250rpx;
+  background-color: rgb(245, 245, 245);
+}
+#btn4::after{
+  border: none;
+}
+#btn4 text{
+  color:black;
+  font-size: 28rpx;
+  position: relative;
+}
+#btn1{
+  position: relative;
+  top:330rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
+#btn2{
+  position: relative;
+  top:380rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+
+#btn2 text{
+  color:white;
+  font-size: 39rpx;
+}
