--- a/miniprogram/pages/mainPage/main/main.wxss
+++ b/miniprogram/pages/mainPage/main/main.wxss
@@ -3,19 +3,12 @@
   height:1300rpx;
   background-color: rgb(245,245,245);
 }
-image{
-  width:250rpx;
-  height:100rpx;
-  position: relative;
-  left:250rpx;
-  top:100rpx;
-}
 #t1{
   width:100%;
   height:220rpx;
   background-color: white;
   position: relative;
-  top:200rpx;
+  top:100rpx;
 }
 
 
@@ -36,12 +29,20 @@ color: black;
 
 #btn3{
   position: relative;
-  top:250rpx;
+  top:150rpx;
   right:230rpx;
   background-color: rgb(245, 245, 245);
 }
 #btn3::after{
   border: none;
+}
+#logo{
+    position: relative;
+    width: 150rpx;
+    height: 150rpx;
+
+    left: 200rpx;
+  
 }
 #btn3 text{
   color:black;
@@ -49,7 +50,7 @@ color: black;
 }
 #btn4{
   position: relative;
-  top:170rpx;
+  top:70rpx;
   left:200rpx;
   width:250rpx;
   background-color: rgb(245, 245, 245);
