--- a/miniprogram/pages/Teacher/classRate/classRate.wxss
+++ b/miniprogram/pages/Teacher/classRate/classRate.wxss
@@ -1,1 +1,81 @@
-/* pages/Teacher/classRate/classRate.wxss */
+.search{  
+  width: 80%;  
+}  
+.search_arr {  
+  border: 1px solid #d0d0d0;  
+  border-radius: 10rpx;  
+  margin-left: 20rpx;  
+}  
+.search_arr input{  
+  margin-left: 60rpx;  
+  height: 60rpx;  
+  border-radius: 5px;  
+}  
+.bc_text {  
+  line-height: 68rpx;  
+  height: 68rpx;  
+  margin-top: 34rpx;  
+}  
+  
+.sousuo {  
+  margin-left: 15rpx;  
+  width: 15%;  
+  line-height: 150%;  
+  text-align: center;  
+  border: 1px solid #d0d0d0;  
+  border-radius: 10rpx;  
+}  
+.page_row{  
+  display: flex;  
+  flex-direction: row  
+}  
+.searchcion {  
+  margin: 10rpx 10rpx 10rpx 10rpx;  
+  position: absolute;  
+  left:25rpx;  
+  z-index: 2;  
+  width: 20px;  
+  height: 20px;  
+  text-align: center;  
+}  
+
+.top-bg{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 20rpx;
+  background-color: #F2F2F2;
+}
+.box-list{
+  margin-top: 10rpx;
+}
+.box-list .box-title-row{
+  display: flex;
+  font-size: 14px;
+  line-height: 42px;
+  border-bottom: 1px solid #F2F2F2;
+  margin: 0 15rpx;
+}
+.box-list .box-data-row{
+  display: flex;
+  font-size: 12px;
+  line-height: 42px;
+  border-bottom: 1px solid #F2F2F2;
+  margin: 0 15rpx;
+}
+.box-list .box-column1{
+  flex: 0 0 160rpx;
+  text-align: center;
+}
+.box-list .box-column2{
+  flex: 0 0 160rpx;
+  text-align: center;
+}
+.box-list .box-column3{
+  flex: 0 0 120rpx;
+  text-align: center;
+}
+.box-list .box-column4{
+  flex: 0 0 150rpx;
+  text-align: center;
+}
