--- a/miniprogram/pages/Teacher/classRate/classRate.wxml
+++ b/miniprogram/pages/Teacher/classRate/classRate.wxml
@@ -1,28 +1,18 @@
-<view class='page_row' bindtap="suo">  
-  <view class="search">  
-    <view class="df search_arr">  
-      <icon class="searchcion" size='20' type='search'></icon>  
-      <input class="disabled"  placeholder="请输入班级" value="{{searchValue}}"/>  
-    </view>  
-  </view>  
-  <view class='sousuo'>搜索</view>  
-</view> 
-<view style="margin-top:{{statusBarHeight}}px;padding-top:44px">
+<view>班级完成情况</view>
+<view style="margin-top:-9rpxpx;padding-top:10rpx">
   <view class="top-bg"></view>
   <view class="box-list">
     <view class="box-title-row">
-      <view class="box-column1">班级</view>
       <view class="box-column2">学号</view>
       <view class="box-column3">姓名</view>
       <view class="box-column4">完成</view>
       <view class="box-column5">剩余</view>
     </view>
-    <view wx:for="{{list}}" wx:key="id" class="box-data-row">
-    <view class="box-column1">{{item.class}}</view>
-      <view class="box-column2">{{item.number}}</view>
+    <view wx:for="{{list}}" class="box-data-row">
+      <view class="box-column2">{{item.NUM}}</view>
       <view class="box-column3">{{item.name}}</view>
-      <view class="box-column4">{{item.finish}}</view>
-      <view class="box-column5">{{item.remain}}</view>
+      <view class="box-column4">{{item.finished}}</view>
+      <view class="box-column5">{{item.remin}}</view>
     </view>
   </view>
 </view>
