--- a/miniprogram/pages/Teacher/publishNotice/publishNotice.wxss
+++ b/miniprogram/pages/Teacher/publishNotice/publishNotice.wxss
@@ -1,1 +1,42 @@
-/* pages/Teacher/publishNotice/publishNotice.wxss */
+#t1{
+  width:100%;
+  height:305rpx;
+  background-color: white;
+  position: relative;
+  top:70rpx;
+}
+
+#t1 text{
+position: relative;
+width: 600rpx;
+left:40rpx;
+top:40rpx;
+color: rgb(143, 143, 143);
+}
+#use{
+  width:400rpx;
+  height:80rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+
+#pass1{
+  width:400rpx;
+  height:305rpx;
+  margin-left: 200rpx;
+  position: relative;
+  bottom: 25rpx;
+}
+
+#btn1{
+  position: relative;
+  top:350rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
