--- a/miniprogram/pages/Teacher/tea/tea.wxml
+++ b/miniprogram/pages/Teacher/tea/tea.wxml
@@ -1,2 +1,25 @@
-<!--pages/Teacher/tea/tea.wxml-->
-<text>pages/Teacher/tea/tea.wxml</text>
+<view id="b1">
+	<text>选择班级</text>
+	<!-- 下拉框 -->
+	<view class='select_box'>
+		<view class='select' catchtap='selectTaps'>
+			<text class='select_text'>{{selectDatas[indexs]}}</text>
+
+		</view>
+		<view class='option_box' style='height:{{shows?(selectDatas.length>5?300:selectDatas.length*60):0}}rpx;'>
+			<text class='option' style='{{indexs==selectDatas.length-1&&"border:0;"}}' wx:for='{{selectDatas}}' wx:key='this' data-index='{{index}}' catchtap='optionTaps'>{{item}}</text>
+		</view>
+	</view>
+</view>
+<block wx:for="{{userListInfo}}">
+	<view class="b2" bindtap="onclick" id="{{index}}">
+		<view class="b3">
+			<image src="{{item.icon}}"></image>
+		</view>
+		<view class="b4">
+			<view>{{item.text}}</view>
+		</view>
+		<view class="listimage" style='background-image:url(/images/1.png)'></view>
+	</view>
+</block>
+<button id="btn1" form-type="submit" bindtap="exit"><text>退出登录</text></button>
