--- a/miniprogram/pages/Teacher/tea/tea.wxss
+++ b/miniprogram/pages/Teacher/tea/tea.wxss
@@ -1,1 +1,121 @@
-/* pages/Teacher/tea/tea.wxss */
+#b1{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:60rpx;
+}
+#b1 text{
+  position: relative;
+  left:40rpx;
+  top:40rpx;
+  color: black;
+  }
+.select_box {
+  width:100%;
+  height:80rpx;
+  margin-left: 150rpx;
+  position: relative;
+  bottom: 60rpx;
+}
+
+.select {
+  box-sizing: border-box;
+  width: 400rpx;
+  height: 86rpx;
+  /* border: 1px solid #efefef; */
+  border-radius: 8rpx;
+  display: flex;
+  align-items: center;
+  padding: 0 20rpx;
+  position: relative;
+  bottom: 5rpx;
+ 
+}
+
+.select_text {
+
+  font-size: 28rpx;
+  flex: 1;
+  color: rgb(102, 102, 102);
+  line-height: 90rpx;
+  height: 86rpx;
+
+}
+
+
+
+.option_box {
+  position: absolute;
+  top: 120rpx;
+  width: 400rpx;
+  /* border: 1px solid #efefef; */
+  box-sizing: border-box;
+  height: 0;
+  overflow-y: auto;
+  border-top: 0;
+  background: #fff;
+  transition: height 0.3s;
+  z-index: 100;
+}
+
+.option {
+  display: block;
+  line-height: 40rpx;
+  font-size: 28rpx;
+  border-bottom: 1px solid #efefef;
+  padding: 10rpx;
+  color: rgb(102, 102, 102);
+}
+
+.b2{
+  top: 200rpx;
+  position: relative;
+  display: flex;
+  padding: 15rpx;
+  align-items: center;
+  border-bottom: 1px solid #F5F5F5;
+  background-color: white;
+  padding-top: 20px;
+}
+
+.listimage{
+  position: absolute;
+  top: 45rpx;
+  right: 25rpx;
+  width: 25rpx;
+  height: 25rpx;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.b3{
+  display: inline-block;
+  position: relative;
+  bottom: 10rpx;
+  width: 20px;
+  margin-right: 5px;
+}
+.b3 image{
+  width: 100%;
+  height: 20px;
+  vertical-align: -2px;
+}
+.b4{
+  display: inline-block;
+  font-size:14px;
+  vertical-align: middle;
+  color: black;
+  position: relative;
+  bottom: 12rpx;
+}
+#btn1{
+  position: relative;
+  top:300rpx;
+  background-color:rgb(51, 204, 170);
+  width:600rpx;
+  border-radius: 50rpx;
+}
+#btn1 text{
+  color:white;
+  font-size: 39rpx;
+}
