--- a/miniprogram/pages/Teacher/updatePwd/updatePwd.wxml
+++ b/miniprogram/pages/Teacher/updatePwd/updatePwd.wxml
@@ -1,2 +1,21 @@
-<!--pages/Teacher/updatePwd/updatePwd.wxml-->
-<text>pages/Teacher/updatePwd/updatePwd.wxml</text>
+<view id="b1">
+  <text>学号</text>
+  <!-- 下拉框 -->
+    <view class='select_box'>
+      <view class='select' catchtap='selectTaps'>
+        <text class='select_text'>{{selectDatas[indexs]}}</text>
+      
+      </view>
+      <view class='option_box' style='height:{{shows?(selectDatas.length>5?300:selectDatas.length*60):0}}rpx;'>
+        <text class='option' style='{{indexs==selectDatas.length-1&&"border:0;"}}' wx:for='{{selectDatas}}' wx:key='this' data-index='{{index}}' catchtap='optionTaps'>{{item}}</text>
+      </view>
+    </view>
+</view>
+<view id="t1">
+<text>原密码</text><input type="text" name="old" id="use" placeholder="" value="{{old}}"></input>
+</view>
+<view id="t2">
+<text>新密码</text><input type="text" name="new" id="use1" placeholder="" value="{{new}}"></input>
+</view>
+<button id="btn1" form-type="submit"><text>确认</text></button>
+
