--- a/miniprogram/pages/mainPage/accMile/accMile.wxml
+++ b/miniprogram/pages/mainPage/accMile/accMile.wxml
@@ -1,2 +1,17 @@
-<!--pages/mainPage/accMile/accMile.wxml-->
-<text>pages/mainPage/accMile/accMile.wxml</text>
+
+<image id="i0" src="/images/距离.png"></image>
+<view id="t1">
+<text>距离:</text><input type="text" name="distance" id="use" placeholder="" value="{{username}}"></input>
+</view>
+<image id="i1" src="/images/配速.png"></image>
+<view id="t2">
+<text>配速:</text><input type="password" name="speed" id="pass1"  value="{{password1}}"></input>
+</view>
+<image id="i2" src="/images/时间.png"></image>
+<view id="t3">
+<text>时间:</text><input type="time" name="password2" id="pass2"  value="{{password2}}"></input>
+</view>
+
+
+<button id="btn1" form-type="submit"><text>暂停</text></button>
+<button id="btn2" form-type="submit" bindtap="end"><text>结束</text></button>
