--- a/miniprogram/pages/mainPage/finishRun/finishRun.wxml
+++ b/miniprogram/pages/mainPage/finishRun/finishRun.wxml
@@ -1,2 +1,14 @@
-<!--pages/mainPage/finishRun/finishRun.wxml-->
-<text>pages/mainPage/finishRun/finishRun.wxml</text>
+<image id="i0" src="/images/距离.png"></image>
+<view id="t1">
+<text>距离:</text><input type="text" name="distance" id="use" placeholder="" value="{{username}}"></input>
+</view>
+<image id="i1" src="/images/配速.png"></image>
+<view id="t2">
+<text>配速:</text><input type="password" name="speed" id="pass1"  value="{{password1}}"></input>
+</view>
+<image id="i2" src="/images/时间.png"></image>
+<view id="t3">
+<text>时间:</text><input type="time" name="password2" id="pass2"  value="{{password2}}"></input>
+</view>
+<view id="t4">打卡完成！今天又是元气满满的一天，明天也是满满的一天！</view>
+
