--- a/miniprogram/pages/Teacher/updatePwd/updatePwd.wxml
+++ b/miniprogram/pages/Teacher/updatePwd/updatePwd.wxml
@@ -1,21 +1,20 @@
 <view id="b1">
-  <text>学号</text>
-  <!-- 下拉框 -->
-    <view class='select_box'>
-      <view class='select' catchtap='selectTaps'>
-        <text class='select_text'>{{selectDatas[indexs]}}</text>
-      
-      </view>
-      <view class='option_box' style='height:{{shows?(selectDatas.length>5?300:selectDatas.length*60):0}}rpx;'>
-        <text class='option' style='{{indexs==selectDatas.length-1&&"border:0;"}}' wx:for='{{selectDatas}}' wx:key='this' data-index='{{index}}' catchtap='optionTaps'>{{item}}</text>
-      </view>
-    </view>
+	<text>学号：</text>
+	<!-- 下拉框 -->
+	<view class='select_box'>
+		<view class='select' catchtap='selectTaps'>
+			<text class='select_text'>{{Sno}}</text>
+
+		</view>
+	</view>
 </view>
 <view id="t1">
-<text>原密码</text><input type="text" name="old" id="use" placeholder="" value="{{old}}"></input>
+	<text>原密码：</text><input type="password" name="old" id="use" placeholder="请输入旧密码" value="{{old}}" bindinput="oldPwd"></input>
 </view>
 <view id="t2">
-<text>新密码</text><input type="text" name="new" id="use1" placeholder="" value="{{new}}"></input>
+	<text>新密码：</text><input type="password" name="new" id="use1" placeholder="请输入新密码" value="{{new}}" bindinput="newPwd"></input>
 </view>
-<button id="btn1" form-type="submit"><text>确认</text></button>
-
+<view id="t2">
+	<text>确认新密码：</text><input type="password" name="new" id="use1" placeholder="请再次输入新密码" value="{{new}}" bindinput="conPwd"></input>
+</view>
+<button id="btn1" form-type="submit" bindtap="confirm"><text>确认</text></button>
