--- a/miniprogram/pages/Teacher/createClass/createClass.wxss
+++ b/miniprogram/pages/Teacher/createClass/createClass.wxss
@@ -73,7 +73,21 @@
   position: relative;
   top:60rpx;
 }
+#t3{
+  width:100%;
+  height:125rpx;
+  background-color: white;
+  position: relative;
+  top:60rpx;
 
+}
+#t3 text{
+  position: relative;
+  width: 600rpx;
+  left:40rpx;
+  top:40rpx;
+  color: black;
+  }
 #t2{
   width:100%;
   height:125rpx;
