--- a/miniprogram/pages/Teacher/publishNotice/publishNotice.wxss
+++ b/miniprogram/pages/Teacher/publishNotice/publishNotice.wxss
@@ -1,6 +1,16 @@
+#title{
+  position: absolute;
+  font-size: 20rpx;
+  top: 20rpx;
+  left: 20rpx;
+}
+#title text{
+  font-size: 30rpx;
+  font-weight: bolder;
+}
 #t1{
   width:100%;
-  height:305rpx;
+  height:505rpx;
   background-color: white;
   position: relative;
   top:70rpx;
@@ -14,11 +24,14 @@ top:40rpx;
 color: rgb(143, 143, 143);
 }
 #use{
-  width:400rpx;
-  height:80rpx;
+  width:650rpx;
+  height:300rpx;
   margin-left: 200rpx;
   position: relative;
-  bottom: 25rpx;
+right: 160rpx;
+top: 60rpx;
+  border: solid 2rpx black;
+  border-radius: 10rpx;
 }
 
 #pass1{
