--- a/miniprogram/pages/mainPage/main/main.wxss
+++ b/miniprogram/pages/mainPage/main/main.wxss
@@ -1,21 +1,37 @@
+#notice{
+  border-radius: 20rpx;
+  border: solid 2rpx black;
+  width: 650rpx;
+  height: 250rpx;
+  position: relative;
+  top: 20rpx;
+  left: 40rpx;
+}
+#kuibu{
+  font-size: 70rpx;
+  font-family: cursive;
+  position: relative;
+  bottom: 50rpx;
+  left: 200rpx;
+}
 #total{
   width:100%;
-  height:1300rpx;
+  height:1100rpx;
   background-color: rgb(245,245,245);
 }
 #t1{
   width:100%;
-  height:220rpx;
+  height:400rpx;
   background-color: white;
   position: relative;
-  top:100rpx;
+  /* top:100rpx; */
 }
 
 
 #t1 text{
 position: relative;
 left:40rpx;
-top:40rpx;
+top:10rpx;
 color: black;
 }
 #use{
@@ -40,7 +56,6 @@ color: black;
     position: relative;
     width: 150rpx;
     height: 150rpx;
-
     left: 200rpx;
   
 }
@@ -65,7 +80,7 @@ color: black;
 }
 #btn1{
   position: relative;
-  top:330rpx;
+  top:170rpx;
   background-color:rgb(51, 204, 170);
   width:600rpx;
   border-radius: 50rpx;
@@ -76,7 +91,7 @@ color: black;
 }
 #btn2{
   position: relative;
-  top:380rpx;
+  top:220rpx;
   background-color:rgb(51, 204, 170);
   width:600rpx;
   border-radius: 50rpx;
