--- a/miniprogram/pages/Mine/announceMent/announceMent.wxml
+++ b/miniprogram/pages/Mine/announceMent/announceMent.wxml
@@ -1,2 +1,8 @@
 <!--pages/Mine/announceMent/announceMent.wxml-->
-<text>pages/Mine/announceMent/announceMent.wxml</text>
+<block wx:for="{{list}}" class='bk'>
+	<view class="tr bg-g">
+		<view class="td">{{item.class}}</view>
+		<view class="td">{{item.time}}</view>
+		<view class="td">{{item.Content}}</view>
+	</view>
+</block>
