--- a/miniprogram/pages/Mine/announceMent/announceMent.wxss
+++ b/miniprogram/pages/Mine/announceMent/announceMent.wxss
@@ -6,9 +6,9 @@
   background: #E6F3F9;
 }
 .tr {
-  border: 1rpx solid black;
-margin-bottom: auto;
+margin: 9rpx;
   width: 100%;
   height: 6rem;
   align-items: center;
+ border-radius: 80rpx;
 }
