--- a/miniprogram/pages/Mine/runHis/runHis.wxml
+++ b/miniprogram/pages/Mine/runHis/runHis.wxml
@@ -4,12 +4,12 @@
     <view class="th">公里数</view>
     <view class="th ">所用时间</view>
   </view>
-  <block wx:for="{{listData}}">
-    <view class="tr bg-g">
-      <view class="td">{{item.date}}</view>
-      <view class="td">{{item.kilometre}}</view>
-      <view class="td">{{item.time}}</view>
+  <view wx:for="{{listData}}" class="news-item">
+    <view class="news-item-left">
+      <view class="news-item-title">{{item.date}}</view>
+      <view class="news-item-title">{{item.kilometre}}KM</view>
+      <view class="news-item-title">{{item.time}}</view>
     </view>
-  </block>
+  </view>
 </view>
 
