--- a/miniprogram/pages/Mine/announceMent/announceMent.wxss
+++ b/miniprogram/pages/Mine/announceMent/announceMent.wxss
@@ -1,14 +1,31 @@
 /* pages/Mine/announceMent/announceMent.wxss */
-.td {
-  width:100%;
+.news-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 8px;
+  padding-top: 8px;
+  padding-right: 8px;
+  padding-bottom: 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  margin-top: 8px;
+  background-color: #fff;
+  border: 1px solid #eaeaea;
+  border-bottom: 1px solid #d0d0d0;
+  border-radius: 5px;
 }
-.bg-g{
-  background: #E6F3F9;
+
+.news-item-right {
+  width: 80px;
+  height: 80px;
 }
-.tr {
-margin: 9rpx;
-  width: 100%;
-  height: 6rem;
-  align-items: center;
- border-radius: 80rpx;
+
+.news-image {
+  width: 80px;
+  height: 80px;
+}
+
+.news-item-title {
+  font-size: 16px;
 }
