--- a/miniprogram/pages/Mine/runHis/runHis.wxss
+++ b/miniprogram/pages/Mine/runHis/runHis.wxss
@@ -29,9 +29,9 @@
   align-items: center;
 }
 .news-item {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between;  */
   padding-left: 8px;
   padding-top: 8px;
   padding-right: 8px;
@@ -44,9 +44,10 @@
   border-bottom: 1px solid #d0d0d0;
   border-radius: 5px;
 }
-.news-item-right{
-  width: 80px;
-  height: 80px;
+.news-item-left{
+  display: flex;
+  flex-direction: row;
+justify-content: center;
 }
 
 .news-image{
@@ -56,4 +57,6 @@
 
 .news-item-title{
   font-size: 16px;
+  width: 33.3%;
+text-align: center;
 }
